--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=cloudsihmar_pet
-sonar.organization=cloudsihmar
+sonar.projectKey=Tnamgay8_pet
+sonar.organization=Tnamgay8
 # --- optional properties ---
 
 # defaults to project key
