--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=Tnamgay8_pet
+sonar.projectKey=tnamgay8_pet
 sonar.organization=Tnamgay8
 # --- optional properties ---
 
