--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # must be unique in a given SonarQube instance
 sonar.projectKey=tnamgay8_pet
-sonar.organization=Tnamgay8
+sonar.organization=tnamgay8
 # --- optional properties ---
 
 # defaults to project key
